# kail_location

./: README.md  传感器参数.md
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  GaitSimulation.h  SensorHook.cpp  elf_util.cpp  elf_util.h
app/src/main/cpp/native_hook/: elf_util.cpp  elf_util.h  hook.cpp
app/src/main/java/com/kail/location/models/: RouteModels.kt
app/src/main/java/com/kail/location/service/: ServiceGo.kt
app/src/main/java/com/kail/location/viewmodels/: RouteSimulationViewModel.kt
app/src/main/java/com/kail/location/views/common/: AppDrawer.kt
app/src/main/java/com/kail/location/views/locationpicker/: LocationPickerActivity.kt
app/src/main/java/com/kail/location/views/routesimulation/: RoutePlanScreen.kt  RouteSimulationActivity.kt  RouteSimulationScreen.kt
app/src/main/java/com/kail/location/xposed/: FakeLocationXposed.kt  KailCommandHandler.kt  NativeHook.kt
